--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,17 @@
-name: Deployment
+
+
+name: Vue Build
 on:
   push:
     branches:
       - master
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
+  build:
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install Packages
+      - name: Checkout source code.
+        uses: actions/checkout@master
+      - name: install npm
         run: npm install
-      - name: Build page
+      - name: build
         run: npm run build
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          #github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./build
