--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-
-
 name: Vue Build
 on:
   push:
@@ -11,7 +9,17 @@ jobs:
     steps:
       - name: Checkout source code.
         uses: actions/checkout@master
+
+      - name: cache node
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json')}}
+          restore-keys: |
+            ${{runner.OS}}-build-${{runner.OS}}-
+
       - name: install npm
         run: npm install
+
       - name: build
         run: npm run build
