--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,42 @@
-name: Vue Build
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: deploy
 on:
   push:
-    branches:
-      - master
+    branches: [master]
+
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-16.04
+
+    env:
+      CI: false
+    strategy:
+      matrix:
+        node-version: [14.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - name: Checkout source code.
-        uses: actions/checkout@master
-
-      - name: cache node
-        uses: actions/cache@v1
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          path: node_modules
-          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json')}}
-          restore-keys: |
-            ${{runner.OS}}-build-${{runner.OS}}-
-
-      - name: install npm
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - name: Install modules
         run: npm install
-
-      - name: build
+      - name: Run test codes
+        run: npm run test
+      - name: Build project
         run: npm run build
+      - name: Deploy build outputs
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.PORT }}
+          source: "build/*"
+          strip_components: 1
+          target: "/var/www/test"
