--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
       - name: Deploy build outputs
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.PORT }}
+          host: ${{ secrets.Oracle.HOST }}
+          username: ${{ secrets.Oracle.USERNAME }}
+          key: ${{ secrets.Oracle.SSH_KEY }}
+          port: ${{ secrets.Oracle.PORT }}
           source: "build/*"
           strip_components: 1
           target: "/var/www/test"
