--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,12 @@ jobs:
         run: npm run build
       - name: Deploy build outputs
         uses: appleboy/scp-action@master
+        env:
+          HOST: ${{ secrets.Oracle.HOST }}
+          USERNAME: ${{ secrets.Oracle.USERNAME }}
+          KEY: ${{ secrets.Oracle.SSH_KEY }}
+          PORT: ${{ secrets.Oracle.PORT }}
         with:
-          host: ${{ secrets.Oracle.HOST }}
-          username: ${{ secrets.Oracle.USERNAME }}
-          key: ${{ secrets.Oracle.SSH_KEY }}
-          port: ${{ secrets.Oracle.PORT }}
           source: "build/*"
           strip_components: 1
           target: "/var/www/test"
