--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,6 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSH_KEY }}
         with:
-          source: "build/*"
+          source: "dist/*"
           strip_components: 1
           target: "/var/www/test"
