--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  mkdir:
     runs-on: ubuntu-latest
     environment: Oracle
     steps:
@@ -17,6 +17,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
+          post: 22
           script: |
             cd ~
             cd mkdir test
