--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,7 +62,18 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.SSH_KEY }}
         with:
-          source: ["./client", "./docker-compose.yaml"]
+          source: "./client"
+          target: "~/test"
+          strip_components: 1
+
+      - name: docker file scp
+        uses: appleboy/scp-action@master
+        env:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          KEY: ${{ secrets.SSH_KEY }}
+        with:
+          source: "./docker-compose.yaml"
           target: "~/test"
           strip_components: 1
 
